--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AK FROZEN FOOD & DRINKS</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shortcut icon" href="./images/logo.JPG" type="image/x-icon">
     <link rel="stylesheet" href="./css/Desktop.CSS">
     <link rel="stylesheet" href="./css/Mobile.CSS">
@@ -20,7 +21,7 @@
             <a href="#In_Stock"><li> In Stock </li> </a>
             <a href="#Contact"><li> Contacts </li> </a>
         </ul>
-        <button id="Btn"> ADD </button>
+        <div id="Btn"> <i class="fa fa-bars" aria-hidden="true"></i> </div>
     </header>
 
         <!-- Home Section  -->
@@ -159,10 +160,10 @@
 
             <div class="contactcolumn social"> 
                 <ul class="social-icon">
-                    <li><a href="#" class="social-icon-link bi-facebook"></a></li>
-                    <li><a href="#" class="social-icon-link bi-instagram"></a></li>
-                    <li><a href="#" class="social-icon-link bi-twitter"></a></li>
-                    <li><a href="#" class="social-icon-link bi-youtube"></a></li>
+                    <li><a href="#"> <i class="fa fa-facebook-square" aria-hidden="true"></i> </a></li>
+                    <li><a href="#"> <i class="fa fa-instagram" aria-hidden="true"></i> </a></li>
+                    <li><a href="#"> <i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
+                    <li><a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
                 </ul>
 
             </div>
